# Real-RAG

./: .gitignore  pyproject.toml
notebooks/: self-rag.ipynb
notebooks/rag_part_2/: rag_part_2.ipynb
