[project]
name = "self-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv",
    "openai",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-core",
    "ipykernel",
    "bs4",
    "chromadb",
    "gradio",
    "llama-index",
    "llama-index-packs-self-rag",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-huggingface"
]
